--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,6 @@ jobs:
             .spago
             output
 
-      - run: spago build
+      - run: spago -x test.dhall build
 
-      - run: spago -x test.dhall test --no-install
+      - run: spago -x test.dhall test
